--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
-argh = "0.1.10"
+dotenv = "0.15.0"
 ethers = { version = "2.0.2", features = ["rustls", "ws"] }
 reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"], default-features = false }
 tokio = { version = "1", features = ["full"] }
