--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.70"
+anyhow = "1.0.71"
 dotenv = "0.15.0"
-ethers = { version = "2.0.2", features = ["rustls", "ws"] }
+ethers = { version = "2.0.7", features = ["rustls", "ws"] }
+futures = "0.3.28"
 reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"], default-features = false }
+serde = "1.0.164"
+serde_json = "1.0.96"
 tokio = { version = "1", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
