--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ dotenv = "0.15.0"
 ethers = { version = "2.0.7", features = ["rustls", "ws"] }
 futures = "0.3.28"
 reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"], default-features = false }
+sentry = { version = "0.31.4",  features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "serde_json", "tracing"], default-features = false }
+sentry-tracing = "0.31.4"
 serde = "1.0.164"
 serde_json = "1.0.96"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
