--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,15 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
+deadpool-redis = { version = "0.12.0", features = ["rt_tokio_1", "serde"] }
 dotenv = "0.15.0"
 ethers = { version = "2.0.7", features = ["rustls", "ws"] }
 futures = "0.3.28"
 reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"], default-features = false }
-sentry = { version = "0.31.4",  features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "serde_json", "tracing"], default-features = false }
-sentry-tracing = "0.31.4"
+sentry = { version = "0.31.5",  features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "serde_json", "tracing"], default-features = false }
+sentry-tracing = "0.31.5"
 serde = "1.0.164"
-serde_json = "1.0.96"
-tokio = { version = "1", features = ["full"] }
+serde_json = "1.0.99"
+tokio = { version = "1", features = ["full", "tracing"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
