--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.71"
+anyhow = "1.0.72"
 deadpool-redis = { version = "0.12.0", features = ["rt_tokio_1", "serde"] }
+derivative = "2.2.0"
 dotenv = "0.15.0"
-ethers = { version = "2.0.7", features = ["rustls", "ws"] }
+ethers = { version = "2.0.8", features = ["rustls", "ws"] }
 futures = "0.3.28"
 reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"], default-features = false }
 sentry = { version = "0.31.5",  features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "serde_json", "tracing"], default-features = false }
 sentry-tracing = "0.31.5"
-serde = "1.0.164"
-serde_json = "1.0.99"
+serde = "1.0.175"
+serde_json = "1.0.103"
 tokio = { version = "1", features = ["full", "tracing"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
