--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,10 @@ serde_json = "1.0.104"
 tokio = { version = "1", features = ["full", "tracing"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+[dev-dependencies]
+env_logger = "0.10"
+test-log = { version = "0.2.12", default-features = false, features = ["trace"] }
+tokio = { version = "1.29.1", features = ["full", "test-util"] }
+tracing = {version = "0.1", default-features = false}
+tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
