--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
-    "rust-analyzer.checkOnSave.extraArgs": [
-        "--target-dir",
-        "${workspaceFolder}/target/check"
+    "rust-analyzer.server.extraEnv": {
+        "CARGO_TARGET_DIR": "target/rust-analyzer"
+    },
+    "rust-analyzer.check.extraArgs": [
+        "--target-dir=target/rust-analyzer"
     ]
 }
