--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -288,6 +288,8 @@ pynacl==1.5.0
     # via pygithub
 pyproject-hooks==1.0.0
     # via build
+pyrate-limiter==2.10.0
+    # via requests-ratelimiter
 pytest==7.4.0
     # via eth-ape
 python-baseconv==1.2.2
@@ -314,7 +316,10 @@ requests==2.31.0
     #   eth-ape
     #   ethpm-types
     #   pygithub
+    #   requests-ratelimiter
     #   web3
+requests-ratelimiter==0.4.1
+    # via -r ./requirements.in
 rich==12.6.0
     # via eth-ape
 rlp==3.0.0
