--- a/requirements.txt
+++ b/requirements.txt
@@ -271,6 +271,8 @@ pyjwt[crypto]==2.8.0
     # via pygithub
 pynacl==1.5.0
     # via pygithub
+pyrate-limiter==2.10.0
+    # via requests-ratelimiter
 pytest==7.4.0
     # via eth-ape
 python-baseconv==1.2.2
@@ -297,7 +299,10 @@ requests==2.31.0
     #   eth-ape
     #   ethpm-types
     #   pygithub
+    #   requests-ratelimiter
     #   web3
+requests-ratelimiter==0.4.1
+    # via -r ./requirements.in
 rich==12.6.0
     # via eth-ape
 rlp==3.0.0
