--- a/requirements.in
+++ b/requirements.in
@@ -1,5 +1,3 @@
-git+https://github.com/ApeWorX/ape.git@refs/pull/1624/head
-
 requests
 requests-ratelimiter
-silverback==0.1.0b11
+silverback==0.1.0
